# wicse-shadowing

./: .gitignore  README.md  latest_direction.json  main.py  pyproject.toml  requirements.txt
src/CNN-main/: .gitignore
src/CNN-main/cnnStuff/: pyproject.toml
src/CNN-main/cnnStuff/src/cnnstuff/: audio_model.py  collect_data.py  predict.py
src/CNN-main/data/: labels.json  manual_labels.json  skipped_files.json
src/CNNmain/: .gitignore  README.md
src/CNNmain/cnnStuff/src/cnnstuff/: collect_data.py  evaluate.py  predict.py  train_model.py
src/audio/: capture.py  classifier.py  direction.py  training.py
src/audio/runs/ast_demo/checkpoint-1/: scheduler.pt  trainer_state.json
src/audio/runs/ast_demo/checkpoint-2/: config.json  scheduler.pt  trainer_state.json
src/audio/runs/ast_demo/checkpoint-3/: scheduler.pt  trainer_state.json
src/audio/runs/ast_demo/checkpoint-4/: rng_state.pth  scheduler.pt  trainer_state.json
src/audio/runs/ast_demo/checkpoint-5/: trainer_state.json
src/overlay/: display.py  overlay.py
