[tool.poetry]
name = "wicseSP"
version = "0.1.0"
description = "Audio classification + direction detection + overlay"
authors = ["Luna <26190850+LunaVoid@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "audio", from = "src" },
    { include = "overlay", from = "src" },
    { include = "cnnstuff", from = "src/CNN-main/cnnStuff/src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"

torch = ">=2.9.0,<3.0.0"
torchvision = ">=0.24.0,<0.25.0"
torchaudio = ">=2.9.0,<3.0.0"

librosa = ">=0.11.0,<0.12.0"
soundfile = ">=0.13.1,<0.14.0"

pandas = ">=2.3.3,<3.0.0"
numpy = "^1.26"
matplotlib = ">=3.10.7,<4.0.0"
scipy = "^1.11"

sounddevice = "^0.5.3"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.2,<9.0.0"
black = ">=25.9.0,<26.0.0"
isort = ">=7.0.0,<8.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
