[project]
name = "cnnstuff"
version = "0.1.0"
description = ""
authors = [
    {name = "Luna",email = "26190850+LunaVoid@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "torch (>=2.9.0,<3.0.0)",
    "torchvision (>=0.24.0,<0.25.0)",
    "torchaudio (>=2.9.0,<3.0.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)"
]

[tool.poetry]
packages = [{include = "cnnstuff", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]
